--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -47,6 +47,9 @@
     </div>
     </div>
     
+    <!-- Add this near the top of the body -->
+    <p>Logged in as: {{ user_email }} | <a href="{{ url_for('logout') }}">Logout</a></p>
+    
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
